--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "mongoose": "^7.3.1",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
