--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
     "tailwind-merge": "^1.13.2"
