--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,15 @@
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.0",
+    "react-select": "^5.7.3",
+    "react-toggle": "^4.1.3",
     "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-toggle": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
