--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/debounce": "^1.2.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "debounce": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
