--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.3.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "swagger-autogen": "^2.23.4",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
