--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "swagger": "ts-node src/utils/swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "mongoose": "^7.3.1",
     "node-fetch": "^2.6.1",
     "swagger-autogen": "^2.23.4",
+    "swagger-ui-express": "^4.6.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
     "@types/node-fetch": "^2.6.4",
+    "@types/swagger-ui-express": "^4.1.3",
     "typescript": "^5.1.3"
   }
 }
