--- a/server/package.json
+++ b/server/package.json
@@ -21,9 +21,7 @@
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.3.1",
     "node-fetch": "^2.6.1",
-    "swagger-autogen": "^2.23.4",
-    "swagger-ui-express": "^4.6.3",
-    "ts-node": "^10.9.1"
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
