--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "watch": "tsc -w",
-    "swagger": "ts-node src/utils/swagger.ts"
+    "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
