--- a/server/package.json
+++ b/server/package.json
@@ -29,5 +29,8 @@
     "@types/node-fetch": "^2.6.4",
     "@types/swagger-ui-express": "^4.1.3",
     "typescript": "^5.1.3"
+  },
+  "overrides": {
+    "tar": "^7.5.3"
   }
 }
